--- a/part3/todo/manifests/secret.enc.yaml
+++ b/part3/todo/manifests/secret.enc.yaml
@@ -1,26 +1,23 @@
-apiVersion: ENC[AES256_GCM,data:7so=,iv:eIZ26rsjbrd8zo6FOPaneLqSt78/6eZchhjCv1Z2uq4=,tag:zAhLihdt5rX2iAzgt9rTpA==,type:str]
-kind: ENC[AES256_GCM,data:xllifGtI,iv:MD+v3/b0OvmbdTEeiFzwt7J0qcH9Drvj6U29sWBhF1Y=,tag:2wa2+5Lbzb1UjlyzWbf6Hw==,type:str]
+apiVersion: ENC[AES256_GCM,data:B+M=,iv:jdgF0xo+MolgNeqbioxeMBfTd8X3ifBQgFmrH4wnMA4=,tag:6DBNk4e7lg193yiKf9StfA==,type:str]
+kind: ENC[AES256_GCM,data:2G3hKb29,iv:DVlDU9P1jE3ez97Zy840Vrx8mLe/UEeXg3sqc5KcTh4=,tag:73hzuCGaj5YZ/IQ3JmC9Xg==,type:str]
 metadata:
-    name: ENC[AES256_GCM,data:JSnRdYcCywMVx+yIt7Y5k6HyHg==,iv:2VwsTJOeUrJClN1xMsLzIT3uw8Biy4qKmRNSTG1qgck=,tag:zMRbvhHfpYGW/0kOehVD1g==,type:str]
-type: ENC[AES256_GCM,data:juKCqHW1,iv:xWHhE0Dirwja6GRpw6v2d0jimI/bHBTi3YTwuGMy/58=,tag:9/sFGt+owYa8KXf6Fkw+1A==,type:str]
+    name: ENC[AES256_GCM,data:QtDnjjvlqp7VFU9EqdLMQGwlAA==,iv:iQTW1U1mkiHvoCkDOc1lBEm6ohYMoT1SqFBNhMyuogA=,tag:Be2NPQr33WrJjtiV1ZtvbA==,type:str]
+type: ENC[AES256_GCM,data:BviyaADl,iv:62Pu9QiEF6li/qst8Ecxv4V4Hyew8Oetm+2eMoL0jXU=,tag:NYck69RHNHNbPbqbDZwyEQ==,type:str]
 data:
-    #ENC[AES256_GCM,data:YXmhKX/2ByzwJ83dsaxbzlHc8h8N0IiVug==,iv:ZPJIiDbx0qHej+GgelQYkbQSsvaZ/GAWJS+sC9e70KU=,tag:Kz9ZFYeZMxt1DQNYDhU7hQ==,type:comment]
-    POSTGRES_USER: ENC[AES256_GCM,data:hugAeXGUZ7EF3gjj,iv:44PSB9GNRiZZFxyNc7kwMelJL0bfrhk6Zb0tWmRjY6s=,tag:3OgYdkAWpAYw1EIhNhxjcQ==,type:str]
-    #ENC[AES256_GCM,data:mZ/IWB6UCAHAB03QKU8Ibigco0rKTOzWFXhPiEWWxQ==,iv:dk7Xlu/ClD3aFVqnOakC7aE7f7Il1zQ6+vKpMYncg2M=,tag:p0MqcRwbrwhiA1gLJXxHqg==,type:comment]
-    POSTGRES_PASSWORD: ENC[AES256_GCM,data:eRgFcgn71Qolo3DavJFPuNlGY18=,iv:XfU5VPlxZS/6O9NKb4FnafTQwMD4KNcrBSoar1zV4Rg=,tag:NruaWA65yIE5AW3tBK+6PQ==,type:str]
-    #ENC[AES256_GCM,data:jT371M2BdZ9dn+ON7ihb5a+8XZa9+3UGZHJQ,iv:WftwYoO2DFmo7cqCHZfMuM/wDJYH/sLdrnqGbpUUZ94=,tag:v+aVgNfadsV/b31j0BkTaQ==,type:comment]
-    POSTGRES_DB: ENC[AES256_GCM,data:r5apud825MGYQzaWJqc7iA==,iv:xZyQgre5Yi67th7DWLMwSK6AsGxmn1sGcceAkVgZlVQ=,tag:q15qXOW2FFNScNmW50FHvQ==,type:str]
+    POSTGRES_USER: ENC[AES256_GCM,data:rBd+7+sqtCiGHnyp,iv:b5MkK15Iv0b28XikgOwFV6VTV6uLTs2v+5Hj5E70VRU=,tag:zgKd15c1b9JTl95iMV7+TA==,type:str]
+    POSTGRES_PASSWORD: ENC[AES256_GCM,data:/LvJRJLH7/BVM+nuP8z1DMbD6/w=,iv:ZaPoPanSkLQJdVVRm8RpMudS2ziC+oS5HGSAgPkWEoA=,tag:0iwH6uJc8oUDFj1SkaZ15g==,type:str]
+    POSTGRES_DB: ENC[AES256_GCM,data:mUiICH8f4ewBdgoJWwzYIw==,iv:ina/yWi0XnqD/BOjbogVpf2HEfXycsw+KQO3r0JW/Sg=,tag:GgSjd6TspuWUG+Kt+66IiQ==,type:str]
 sops:
     kms: []
     gcp_kms:
         - resource_id: projects/tough-anagram-448015-h7/locations/global/keyRings/secret_keyring/cryptoKeys/keyring1
-          created_at: "2025-01-22T20:57:56Z"
-          enc: CiQA/v1ObGXSlF9J2EUzXIpItLK4FQt5ZOQZYa1jHDv8NJJwqGESSQC+rS0DwHEn4Yt1pUuLS5y3RP00k/upuYRQgHGgsfu1crT+PQsf3s3lY0wcjTh/grQkmPttdyL/f8225BuUUIHy/ww5OdKZNZg=
+          created_at: "2025-01-22T21:10:33Z"
+          enc: CiQA/v1ObEe3oRReregugma6Zz7i7bkWHMdOzCfiLxkw+q4jeysSSQC+rS0D7XyVw2y/FYtoe/I0T2wADQQsGOt+nb0PBAbqo/LywEVe4K7BGGj7YRMzX2w/OTUXbgmz1wc8dPIMd3YbNgyisj0N7CA=
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2025-01-22T20:57:56Z"
-    mac: ENC[AES256_GCM,data:LH6KScOw6SzoJp+n0zmey2++tKu4MUcCA21+gRSovIdyz1jff7RIh3WlOsDeW0Fru466tvhMRmlWleKJgFWqtSzGNvegDYqG1MFOEAhakMb05E9hQuvuB1Zd2AtFcHS9rGHMpOaxGXSvTl9d5LDF+q54iPAeiUGJPffyyG83RaU=,iv:MRYquO88+oHeAOY+YL1j/0ValDxxPbnVGRy6yzNu5so=,tag:dqw9SMA+ui7TVZ/zcJjpNA==,type:str]
+    lastmodified: "2025-01-22T21:10:33Z"
+    mac: ENC[AES256_GCM,data:5e8E/SDqFE/OT9Igx1HanicBgPNpanIzBi4elAKHmMy6drcETwv1oIzLC7oEsVR6toHUnbEV5sxnjLzBcMoxtgDIxywSBXJLK6lKRm+7+8iZHivSDHVqJinkkESt8ML4NrPB2vI8RssLDSgVUxmBUVjmWDsbcZRdH83AGNmHJik=,iv:z0p3FxeX7HN+Zz10H1ESsZry0J6fwCONvtFaKKYtYeQ=,tag:QFNdsbWwGSBgkArd88EFJA==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.9.3
