--- a/part3/todo/manifests/backend-deployment.yaml
+++ b/part3/todo/manifests/backend-deployment.yaml
@@ -36,6 +36,13 @@ spec:
               secretKeyRef:
                 name: todo-db-credentials
                 key: POSTGRES_DB
+        resources:      
+          requests:
+            cpu: 100m
+            memory: 128Mi
+          limits:
+            cpu: 200m
+            memory: 256Mi
         readinessProbe:
           httpGet:
             path: /health
