--- a/part3/todo/manifests/front-deployment.yaml
+++ b/part3/todo/manifests/front-deployment.yaml
@@ -40,3 +40,11 @@ spec:
             port: 5000
           initialDelaySeconds: 5
           periodSeconds: 10
+        resources:
+          requests:
+            cpu: 50m
+            memory: 64Mi
+          limits:
+            cpu: 100m
+            memory: 128Mi
+
