--- a/part4/log_output/manifests/postgres-statefulset.yaml
+++ b/part4/log_output/manifests/postgres-statefulset.yaml
@@ -22,11 +22,20 @@ spec:
           name: postgres
         env:
         - name: POSTGRES_USER
-          value: pingpong
+          valueFrom:
+            secretKeyRef:
+              name: postgres-credentials
+              key: POSTGRES_USER
         - name: POSTGRES_PASSWORD
-          value: securepassword
+          valueFrom:
+            secretKeyRef:
+              name: postgres-credentials
+              key: POSTGRES_PASSWORD
         - name: POSTGRES_DB
-          value: pingpongdb
+          valueFrom:
+            secretKeyRef:
+              name: postgres-credentials
+              key: POSTGRES_DB
         volumeMounts:
         - name: postgres-data
           mountPath: /var/lib/postgresql/data
