--- a/part4/log_output/manifests/deployment.yaml
+++ b/part4/log_output/manifests/deployment.yaml
@@ -16,11 +16,14 @@ spec:
       containers:
       - name: log-output
         image: macrichard/log-output:4.1
-        env:
-        - name: DATABASE_URL
-          value: "postgresql://pingpong:securepassword@postgres-svc:5432/pingpongdb"
         ports:
         - containerPort: 5000
+        readinessProbe:
+            httpGet:
+              path: /pingpong/health
+              port: 5000
+            initialDelaySeconds: 10
+            periodSeconds: 5
         env:
         - name: MESSAGE
           valueFrom:
