--- a/part4/pingpong/manifests/deployment.yaml
+++ b/part4/pingpong/manifests/deployment.yaml
@@ -3,6 +3,8 @@ kind: Deployment
 metadata:
   name: ping-pong
   namespace: appnamespace
+  labels:
+    app: ping-pong
 spec:
   replicas: 1
   selector:
@@ -15,9 +17,35 @@ spec:
     spec:
       containers:
       - name: ping-pong
-        image: macrichard/ping-pong:4.2
+        image: macrichard/ping-pong:4.6
+        imagePullPolicy: Always
         ports:
         - containerPort: 5000
         env:
-        - name: DATABASE_URL
-          value: "postgresql://pingpong:securepassword@postgres-svc:5432/pingpongdb"
+        - name: DATABASE_USER
+          valueFrom:
+            secretKeyRef:
+              name: postgres-credentials
+              key: DATABASE_USER
+        - name: DATABASE_PASSWORD
+          valueFrom:
+            secretKeyRef:
+              name: postgres-credentials
+              key: DATABASE_PASSWORD
+        - name: DATABASE_NAME
+          valueFrom:
+            secretKeyRef:
+              name: postgres-credentials
+              key: DATABASE_NAME
+        - name: DATABASE_HOST
+          valueFrom:
+            secretKeyRef:
+              name: postgres-credentials
+              key: DATABASE_HOST
+        resources:
+          requests:
+            memory: "64Mi"
+            cpu: "50m"
+          limits:
+            memory: "128Mi"
+            cpu: "250m"
