--- a/part4/todo/manifests/backend-db-statefulset.yaml
+++ b/part4/todo/manifests/backend-db-statefulset.yaml
@@ -7,7 +7,7 @@ spec:
   serviceName: postgres-svc
   replicas: 1
   updateStrategy:
-    type: OnDelete 
+    type: OnDelete
   selector:
     matchLabels:
       app: postgres-db
@@ -40,6 +40,23 @@ spec:
               key: POSTGRES_DB
         - name: PGDATA
           value: /var/lib/postgresql/data/pgdata
+        readinessProbe:
+          exec:
+            command:
+              - /bin/sh
+              - -c
+              - pg_isready -U $POSTGRES_USER -d $POSTGRES_DB
+          initialDelaySeconds: 5
+          periodSeconds: 10
+
+        livenessProbe:
+          exec:
+            command:
+              - /bin/sh
+              - -c
+              - pg_isready -U $POSTGRES_USER -d $POSTGRES_DB
+          initialDelaySeconds: 10
+          periodSeconds: 10
         volumeMounts:
         - name: postgres-data
           mountPath: /var/lib/postgresql/data
@@ -47,7 +64,7 @@ spec:
   - metadata:
       name: postgres-data
     spec:
-      accessModes: 
+      accessModes:
         - ReadWriteOnce
       resources:
         requests:
