--- a/part4/todo/manifests/front-deployment.yaml
+++ b/part4/todo/manifests/front-deployment.yaml
@@ -23,7 +23,7 @@ spec:
             claimName: shared-pvc
       containers:
       - name: todo-app
-        image: PROJECT/IMAGEFRONT
+        image: macrichard/todo-app:5.3
         ports:
         - containerPort: 5000
         volumeMounts:
@@ -40,6 +40,12 @@ spec:
             port: 5000
           initialDelaySeconds: 5
           periodSeconds: 10
+        livenessProbe:
+          httpGet:
+            path: /
+            port: 5000
+          initialDelaySeconds: 10
+          periodSeconds: 10
         resources:
           requests:
             cpu: 50m
@@ -47,4 +53,3 @@ spec:
           limits:
             cpu: 100m
             memory: 128Mi
-
