--- a/part4/todo/manifests/ingress.yaml
+++ b/part4/todo/manifests/ingress.yaml
@@ -2,12 +2,9 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: project-ingress
-  namespace: project  
-  annotations:
-    kubernetes.io/ingress.class: gce
-    networking.gke.io/health-check-path: /
+  namespace: project
 spec:
-  ingressClassName: gce
+  ingressClassName: nginx
   rules:
   - http:
       paths:
