--- a/part4/pingpong/g_manifests/deployment.yaml
+++ b/part4/pingpong/g_manifests/deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: ping-pong
-        image: macrichard/ping-pong:4.6
+        image: PROJECT/IMAGE
         imagePullPolicy: Always
         ports:
         - containerPort: 5000
