--- a/.github/workflows/pingpong.yaml
+++ b/.github/workflows/pingpong.yaml
@@ -8,6 +8,7 @@ on:
 jobs:
   build-and-release:
     runs-on: ubuntu-latest
+    environment: default
 
     steps:
       - name: Check out the repo
